--- a/styles/default.css
+++ b/styles/default.css
@@ -30,8 +30,9 @@ main,
 footer {
     max-width: 1000px;
     margin: 0 auto;
-    width: 95%;
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 95;
 }
 
 header {
@@ -67,7 +68,7 @@ nav ul li a:hover {
     font-size: 1.2rem;
 }
 
-main h1 {
+h1 {
     text-align: center;
     margin-bottom: 0;
     color: aquamarine;
